$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- fix extra slash in captive portal redirect

- replaced if_re driver by Realtek customized version to support
  RTL8111C (among others)

- add support for (manually updated) CRLs for IPsec VPN
  (contributed by Sebastian Lemke)

- prevent /ext directory from being listed through webGUI
  (reported by Bernd Strehhuber)

- fix typo in system_do_extensions() that broke extensions support
  (reported by Bernd Strehhuber)

- make dnsmasq use --stop-dns-rebind by default to increase security and
  protect against dns rebind attacks that are scheduled to announce

- add check for DHCP reservation entries for the same MAC address

- add 'Bind to LAN' option for syslog, so you can syslog over a vpn tunnel.

- change edns to 4096 from default of 1280 for dnsmasq, should help with DNSSEC

- add support for user-customizable captive portal logout and status page,
  as well as a password change option for local CP users
  (contributed by Stephane Billiart)

- don't let missing DNS server information keep DHCPD from starting


1.32
----

- allow both a v4 and a v6 entry for the same host in DNS forwarder overrides

- fix nameserver handling when IPv6 PPP WAN is enabled

- Fix auto suggested ipv6 address.

- add wildcard information text for dns forwarder

- add Farenheit support for system temperatures.

- add kernel patch for vr(4) lockups after link flaps (e.g. on ALIX boards)

- Add support for dns forward wildcard, use * as hostname
- Add SixXS interface to traffic Graph

---
- Update text for WAN RA, to suggest this is normally off
- Fix ipv6 link local filter rule, missing newline
- Fix dhcpv4 having ipv6 address inserted in dhcpd.conf
- Make motherboard monitor off by default, and switchable in advanced/misc.

1.31
----
- added patch to ISC-DHCPD to rewrite lease file every 5 minutes instead of
  every hour
